--- a/input-pratice/src/app/simple-form/simple-form.component.scss
+++ b/input-pratice/src/app/simple-form/simple-form.component.scss
@@ -1,5 +1,12 @@
-.form-container {
+.container {
+  width: 100%;
   display: flex;
+  justify-content: center;
+}
+.form-container {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
   padding: 100px;
   button {
@@ -7,6 +14,6 @@
     padding: 0 10px;
   }
   input {
-    padding: 10px ;
+    padding: 10px;
   }
 }
