fix custom validator

--- a/input-pratice/src/app/input-field/input-field.component.html
+++ b/input-pratice/src/app/input-field/input-field.component.html
@@ -27,7 +27,7 @@
         !control.errors?.['email'] &&
         !control.errors?.['minlength'] &&control.errors?.['forbiddenName'] "
     >
-      example Hdang1612@!
+      example Hdang1612!
     </p>
   </div>
 </div>
