--- a/task-1/src/app/features/user/pages/user-detail/user-detail.component.html
+++ b/task-1/src/app/features/user/pages/user-detail/user-detail.component.html
@@ -1,1 +1,8 @@
-<p>user-detail works!</p>
+<div class="content">
+  <div class="content__header">Chi tiết user</div>
+  <div *ngIf="isLoading">...Loading</div>
+  <div *ngIf="!isLoading">
+    <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+    <p>{{ user.email }}</p>
+  </div>
+</div>
