--- a/task-1/src/app/shared/components/user-list-item/user-list-item.component.scss
+++ b/task-1/src/app/shared/components/user-list-item/user-list-item.component.scss
@@ -3,6 +3,7 @@
   border: 0.1rem solid #ccc;
   border-radius: 2rem;
   padding: 1rem;
+  cursor: pointer;
   &__avatar {
     width: 6rem;
     height: 6rem;
