feat: input text base  + form add

--- a/task-1/src/app/features/user/pages/user-create/user-create.component.html
+++ b/task-1/src/app/features/user/pages/user-create/user-create.component.html
@@ -1,1 +1,25 @@
-<p>user-create works!</p>
+<div class="container">
+  <div class="form-container">
+    <app-text-input
+      label="first_name"
+      [control]="getControl('first_name')"
+      placeholder="Input user name"
+      type="text"
+    ></app-text-input>
+    <app-text-input
+      label="last_name"
+      [control]="getControl('last_name')"
+      placeholder="Input user name"
+      type="text"
+    ></app-text-input>
+    <app-text-input
+      label="email"
+      [control]="getControl('email')"
+      placeholder="Input password"
+      type="email"
+    ></app-text-input>
+    {{ createForm.value | json }}
+
+    <button class="submit-btn" (click)="onSubmit()" type="submit">Thêm</button>
+  </div>
+</div>
