--- a/task-1/src/app/features/user/pages/user-list/user-list.component.scss
+++ b/task-1/src/app/features/user/pages/user-list/user-list.component.scss
@@ -11,6 +11,24 @@
     text-align: center;
     margin-bottom: 2rem;
   }
+  .add-btn-container {
+    width: 60%;
+    justify-content: flex-end;
+    display: flex;
+    margin: 2rem 0;
+    .add-btn {
+      display: flex;
+      gap: 0.6rem;
+      align-items: center;
+      font-size: 1.6rem;
+      padding: 0.8rem 1rem;
+      border: 0;
+      background: #4caf4f;
+      color: white;
+      border-radius: 1rem;
+      cursor: pointer;
+    }
+  }
   &__users-list {
     width: 60%;
     gap: 2rem;
@@ -42,15 +60,16 @@
     cursor: pointer;
     border-radius: 0.5rem;
     background-color: #eee;
-    transition: background-color 0.3s ease;
+    transition: all 0.3s ease;
 
     &--active {
-      background-color: #007bff;
+      background-color: #4caf4f;
       color: white;
     }
 
     &:hover {
-      background-color: #ddd;
+      background-color: #4caf4f;
+      color: white;
     }
   }
 }
