--- a/task-1/src/app/features/user/pages/user-list/user-list.component.html
+++ b/task-1/src/app/features/user/pages/user-list/user-list.component.html
@@ -6,12 +6,11 @@
     </button>
   </div>
   <div class="content__users-list">
-    <div *ngIf="isLoading">...Loading</div>
+    <app-loading *ngIf="isLoading"></app-loading>
     <ng-container *ngIf="!isLoading">
       <app-user-list-item
         *ngFor="let user of users"
         [user]="user"
-        
       ></app-user-list-item>
     </ng-container>
   </div>
