--- a/task-1/src/app/shared/components/header/header.component.html
+++ b/task-1/src/app/shared/components/header/header.component.html
@@ -1,5 +1,4 @@
-<div
-  class="header-container"
->
+<div class="header-container">
   <h1 style="color: white">Header</h1>
+  <button (click)="logOut()" class="logout-btn">Đăng xuất</button>
 </div>
