refactor : assets icon

--- a/task-1/src/app/shared/components/user-list-item/user-list-item.component.html
+++ b/task-1/src/app/shared/components/user-list-item/user-list-item.component.html
@@ -10,10 +10,10 @@
   </div>
   <div class="btn-container">
     <button class="update-btn" [routerLink]="['/user/update', user.id]">
-      <img src="./assets/update-icon.svg" alt="" />
+      <img src="./assets/icon/update-icon.svg" alt="" />
     </button>
     <button class="delete-btn" (click)="deleteUser()">
-      <img src="./assets/delete-icon.svg" alt="" />
+      <img src="./assets/icon/delete-icon.svg" alt="" />
     </button>
   </div>
 </div>
