--- a/task-1/src/app/features/user/pages/user-list/user-list.component.html
+++ b/task-1/src/app/features/user/pages/user-list/user-list.component.html
@@ -2,7 +2,7 @@
   <div class="content__header">Danh sách người dùng</div>
   <div class="add-btn-container">
     <button [routerLink]="['/user/create']" class="add-btn">
-      Thêm <img src="./assets/plus.svg" alt="" />
+      Thêm <img src="./assets/icon/plus.svg" alt="" />
     </button>
   </div>
   <div class="content__users-list">
@@ -21,7 +21,7 @@
       class="prev-btn pagination__btns"
       (click)="prevPage()"
       [class.pagination__btns--disable]="currentPage === 1"
-      ><img src="./assets/arrow-left.svg" alt=""
+      ><img src="./assets/icon/arrow-left.svg" alt=""
     /></span>
     <div class="pagination__pages">
       <button
@@ -37,7 +37,7 @@
       class="next-btn pagination__btns"
       (click)="nextPage()"
       [class.pagination__btns--disable]="currentPage === totalPages.length"
-      ><img src="./assets/arrow-right.svg" alt=""
+      ><img src="./assets/icon/arrow-right.svg" alt=""
     /></span>
   </div>
 </div>
